# CLIC

./: .gitignore  README.md  Tareas.txt
BACK/template/: compose.yaml
FRONT/: FRONT.vbs
FRONT/template/: 02_script.sh  compose.yaml
app/: init.js
app/compose/back/: .env.example
app/compose/back-uv - copia (2)/: .env.example
app/compose/back-uv/template/: compose.yaml  dockerfile
app/compose/back/template/: compose.yaml
app/compose/back/workdir/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  vscode-extension.json
app/compose/back/workdir/alembic/: env.py  script.py.mako
app/compose/back/workdir/app/: main.py
app/compose/back/workdir/app/database/migration/: 000users.py
app/compose/back/workdir/app/database/model/: README.md  User.py
app/compose/back/workdir/app/endpoint/route/: README.md  user.py
app/compose/back/workdir/app/endpoint/validation/: README.md  userSchema.py
app/compose/back/workdir/app/settings/: __init__.py
app/compose/front/: .env.example
app/compose/front-bun - copia (2)/: .env.example
app/compose/front-bun - copia (2)/template/: compose.yaml
app/compose/front/template/: compose.yaml  dockerfile
app/extension/: vscode-extension.json
app/script/powershell/: envTools.psm1  hiddenLifter.ps1  selectorLifter.ps1  visibleLifter.ps1
test/script/: hiddenLifter.ps1  visibleLifter.ps1
test/template/: 01_script.sh
