# Metadatos principales del proyecto
[project]
name = "app"
version = "0.1.0"
description = "Backend FastAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "tenacity>=9.0.0",
    "pydantic[email]>=2.10.0",
    "jinja2>=3.1.4",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "pyjwt>=2.9.0",
    "pwdlib[argon2]>=0.3.0",
]

# Dependencias específicas para desarrollo y testing
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "coverage>=7.6.0",
]

# Configuración del sistema de build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuración de MyPy para tipado estricto
[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

# Configuración general de Ruff
[tool.ruff]
target-version = "py310"
line-length = 88

# Reglas de linting activadas e ignoradas en Ruff
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "ARG", "T20", "S", "PT"]
ignore = ["E501", "B008"]

# Estilo de formateo aplicado por Ruff
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Configuración de Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Configuración de Coverage para medir cobertura del código
[tool.coverage.run]
source = ["app"]
omit = ["app/database/migration/*", "alembic/*"]

# Configuración de uv para evitar error de hardlinks
[tool.uv]
cache-dir = ".uv_cache"